--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
   <meta charset="utf-8">
   <title>Game Time</title>
+  <link rel="stylesheet" type="text/css" href="./lib/style.css">
 </head>
 <body>
-  
+  <div id="game-container">
+  <canvas id="game" width="900" height="700">
+  </canvas>
+  </div>
   <script src="main.bundle.js"></script>
 </body>
 </html>
