--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" type="text/css" href="./lib/style.css">
 </head>
 <body>
+  <div id="game-bg"></div>
   <div id="game-container">
   <canvas id="game" width="900" height="700">
   </canvas>
