--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <!-- <aside class="player-info" id="player2">Lives:</aside> -->
       <!-- <aside class="player-info" id="player1">Lives:</aside> -->
       <button class="game-setup-btn no-btn" id="start-btn">Start</button>
+      <button class="game-setup-btn no-btn" id="new-game-btn">New Game</button>
       <form class="game-setup">
       <button class="game-setup-btn" id="level1">Easy</button>
       <button class="game-setup-btn" id="level2">Medium</button>
