--- a/index.html
+++ b/index.html
@@ -19,6 +19,26 @@
       <button class="game-setup-btn" id="level2">Medium</button>
       <button class="game-setup-btn" id="level3">Hard</button>
       </form>
+      <div id="instructions" class="game-setup-btn">
+        <div class="p2">
+          Player 2:
+          <ul>
+            <li>W: up</li>
+            <li>A: left</li>
+            <li>S: right</li>
+            <li>D: down</li>
+          </ul>
+        </div>
+        <div class="p1">
+          Player 1:
+          <ul>
+            <li>⬆: up</li>
+            <li>⬅: left</li>
+            <li><span class="small-arrow">➡</span>: right</li>
+            <li>⬇: down</li>
+          </ul>
+        </div>
+      </div>
       <canvas id="game" width="900" height="700">
       </canvas>
     </div>
